Keep pre's within sensible dimensions and ensure that long lines are wrapped

--- a/public/stylesheets/wiki.css
+++ b/public/stylesheets/wiki.css
@@ -46,7 +46,16 @@ pre {
   background-color: #efefef;
   padding: 4px 9px;
   font-size: 0.9em;
-  line-height: 1.4
+  line-height: 1.4;
+  overflow: auto;
+  max-height: 300px;
+  
+  white-space: pre-wrap; /* css-3 */
+  white-space: -moz-pre-wrap !important; /* Mozilla, since 1999 */
+  white-space: -pre-wrap; /* Opera 4-6 */
+  white-space: -o-pre-wrap; /* Opera 7 */
+  /* width: 99%; */
+  word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
 
 table {
